[package]
name = "serde_json"
version = "1.0.149"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "parser-implementations", "no-std"]
description = "A JSON serialization file format"
documentation = "https://docs.rs/serde_json"
edition = "2024"
keywords = ["json", "serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/serde-rs/json"
rust-version = "1.93.0"

[workspace]
members = [".", "tests/crate"]
exclude = ["fuzz"]

[workspace.dependencies]
automod = { version = "1.0.16" }
indexmap = { version = "2.13.0" }
indoc = { version = "2.0.7" }
itoa = { version = "1.0" }
memchr = { version = "2", default-features = false }
ref-cast = { version = "1.0.25" }
rustversion = { version = "1.0.22" }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11.19" }
serde_core = { version = "1.0.228", default-features = false }
serde_derive = { version = "1.0.228" }
serde_json = { path = ".", default-features = false }
serde_stacker = { version = "0.1.14" }
trybuild = { version = "1.0.116", features = ["diff"] }
zmij = { version = "1.0" }

[dependencies]
indexmap = { workspace = true, optional = true }
itoa = { workspace = true }
memchr = { workspace = true }
serde_core = { workspace = true }
zmij = { workspace = true }

[target.'cfg(any())'.dependencies]
serde = { workspace = true }

[dev-dependencies]
automod = { workspace = true }
indoc = { workspace = true }
ref-cast = { workspace = true }
rustversion = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
serde_stacker = { workspace = true }
trybuild = { workspace = true }

[package.metadata.docs.rs]
features = ["preserve_order", "raw_value", "unbounded_depth"]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]

[package.metadata.playground]
features = ["float_roundtrip", "raw_value", "unbounded_depth"]


[patch.crates-io]
serde = { path = "../serde/serde" }
serde_core = { path = "../serde/serde_core" }
serde_derive = { path = "../serde/serde_derive" }


### FEATURES #################################################################

[features]
default = ["std"]

std = ["memchr/std", "serde_core/std"]

# Provide integration for heap-allocated collections without depending on the
# rest of the Rust standard library.
# NOTE: Disabling both `std` *and* `alloc` features is not supported yet.
alloc = ["serde_core/alloc"]

# Make serde_json::Map use a representation which maintains insertion order.
# This allows data to be read into a Value and written back to a JSON string
# while preserving the order of map keys in the input.
preserve_order = ["indexmap", "std"]

# Use sufficient precision when parsing fixed precision floats from JSON to
# ensure that they maintain accuracy when round-tripped through JSON. This comes
# at an approximately 2x performance cost for parsing floats compared to the
# default best-effort precision.
#
# Unlike arbitrary_precision, this feature makes f64 -> JSON -> f64 produce
# output identical to the input.
float_roundtrip = []

# Use an arbitrary precision number representation for serde_json::Number. This
# allows JSON numbers of arbitrary size/precision to be read into a Number and
# written back to a JSON string without loss of precision.
#
# Unlike float_roundtrip, this feature makes JSON -> serde_json::Number -> JSON
# produce output identical to the input.
arbitrary_precision = []

# Provide a RawValue type that can hold unprocessed JSON during deserialization.
raw_value = []

# Provide a method disable_recursion_limit to parse arbitrarily deep JSON
# structures without any consideration for overflowing the stack. When using
# this feature, you will want to provide some other way to protect against stack
# overflows, such as by wrapping your Deserializer in the dynamically growing
# stack adapter provided by the serde_stacker crate. Additionally you will need
# to be careful around other recursive operations on the parsed result which may
# overflow the stack after deserialization has completed, including, but not
# limited to, Display and Debug and Drop impls.
unbounded_depth = []
